--- a/index.html
+++ b/index.html
@@ -21,28 +21,40 @@
 
    <div class="container">
 
-      <div class="row" name="header" id="header">
-         <div class="col-lg-12">
-            <h1>Intonation and Evidence</h1>
-            <p>Collaborative Research Experience for Undergraduates 2016-2017</p>
-            <p>Simmons College, Boston, MA</p>
+      <nav class="navbar navbar-default">
+         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+               <h1>Intonation and Evidence</h1>
+               <p>Collaborative Research Experience for Undergraduates 2016-2017</p>
+               <p>Simmons College, Boston, MA</p>
+            </a>
          </div>
-      </div>
 
-      <div class="row" name="nav" id="nav">
-         <div class="col-xs-3">
-            <span class="nav-button" name="home" id="home"><a href="index.html">home</a></span>
-         </div>
-         <div class="col-xs-3">
-            <span class="nav-button" name="home" id="home"><a href="project.html">project</a></span>
-         </div>
-         <div class="col-xs-3">
-            <span class="nav-button" name="home" id="home"><a href="blog.html">blog</a></span>
-         </div>
-         <div class="col-xs-3">
-            <span class="nav-button" name="home" id="home"><a href="team.html">team</a></span>
-         </div>
-      </div>
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+               <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+               <li><a href="#">Project</a></li>
+               <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blogs <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="#">Team</a></li>
+                     <li role="separator" class="divider"></li>
+                     <li><a href="#">Emily</a></li>
+                     <li><a href="#">Karina</a></li>
+                     <li><a href="#">Sara</a></li>
+                  </ul>
+               </li>
+               <li><a href="#">About Us</a></li>
+            </ul>
+         </div><!-- /.navbar-collapse -->
+      </nav>
 
       <div class="row">
          <div class="col-lg-12">
